// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBox Test 1`] = `
<div
  aria-describedby="Test Modal Box"
  aria-label={null}
  aria-labelledby={null}
  aria-modal="true"
  className="pf-c-modal-box"
  id="boxId"
  role="dialog"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test large 1`] = `
<div
  aria-describedby="Test Modal Box"
  aria-label={null}
  aria-labelledby={null}
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  id="boxId"
  role="dialog"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test medium 1`] = `
<div
  aria-describedby="Test Modal Box"
  aria-label={null}
  aria-labelledby={null}
  aria-modal="true"
  className="pf-c-modal-box pf-m-md"
  id="boxId"
  role="dialog"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test small 1`] = `
<div
  aria-describedby="Test Modal Box"
  aria-label={null}
  aria-labelledby={null}
  aria-modal="true"
  className="pf-c-modal-box pf-m-sm"
  id="boxId"
  role="dialog"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test top aligned 1`] = `
<div
  aria-describedby="Test Modal Box"
  aria-label={null}
  aria-labelledby={null}
  aria-modal="true"
  className="pf-c-modal-box pf-m-align-top"
  id="boxId"
  role="dialog"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test top aligned distance 1`] = `
<div
  aria-describedby="Test Modal Box"
  aria-label={null}
  aria-labelledby={null}
  aria-modal="true"
  className="pf-c-modal-box pf-m-align-top"
  id="boxId"
  role="dialog"
  style={
    Object {
      "--pf-c-modal-box--m-align-top--spacer": "50px",
    }
  }
>
  This is a ModalBox
</div>
`;
